[tool.poetry]
name = "trust"
version = "1.0.0"
description = "Data-driven controller synthesis for unknown dynamical systems"
authors = ["Jamie Gardner <jamie@tgo.dev>"]
readme = "README.md"
license = "CC-BY-4.0"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.10"

# Web framework
Flask = "^3.1.0"
flask-inertia = "^0.9"
flask-vite = "^0.5.1"
Werkzeug = "^3.1.4"
Jinja2 = "^3.1.6"
gunicorn = "^23.0.0"

# Scientific computing
numpy = "^1.26.4"
sympy = "^1.12"
cvxpy = "^1.5.2"
cvxopt = "^1.3.2"
PICOS = "^2.4.17"
SumOfSquares = "^1.3.1"
Mosek = "^10.1.26"
clarabel = "^0.9.0"
ecos = "^2.0.14"

# Utilities
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
PyYAML = "^6.0.1"
Faker = "^26.1.0"
funcy = "^2.0"
jsmin = "^3.0.1"
watchdog = "^4.0.1"

# Monitoring
sentry-sdk = {version = "^2.18.0", extras = ["flask"]}

# Build tools
setuptools = "^78.1.1"
wheel = "^0.46.2"
Cython = "^3.0.10"

# Development
black = "^24.4.2"
pytest = "^8.3.1"
yappi = "^1.6.0"

# Additional dependencies from requirements.txt
annotated-types = "^0.7.0"
blinker = "^1.8.2"
Brian2 = "^2.6.0"
click = "^8.1.7"
colorama = "^0.4.6"
exceptiongroup = "*"
importlib_metadata = "^8.1.0"
iniconfig = "^2.0.0"
itsdangerous = "^2.2.0"
llvmlite = "^0.43.0"
MarkupSafe = "^2.1.5"
mpmath = "^1.3.0"
mypy-extensions = "^1.0.0"
packaging = "^24.0"
pathspec = "^0.10.3"
pyparsing = "^3.1.2"
python-dateutil = "^2.9.0"
six = "^1.16.0"
soupsieve = "^2.5"
tomli = "^2.0.1"
typing_extensions = "^4.12.2"
tzdata = "^2024.1"
zipp = "^3.19.2"
cryptography = "^46.0.3"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
